css/main.scss
/* ... */
.highlight .nn {
    color: #555
}

.highlight .nt {
    color: navy
}

.highlight .nv {
    color: teal
}

.highlight .ow {
    font-weight: 700
}

.highlight .w {
    color: #bbb
}

.highlight .mf {
    color: #099
}

.highlight .mh {
    color: #099
}

.highlight .mi {
    color: #099
}

.highlight .mo {
    color: #099
}

.highlight .sb {
    color: #d14
}

.highlight .sc {
    color: #d14
}

.highlight .sd {
    color: #d14
}

.highlight .s2 {
    color: #d14
}

.highlight .se {
    color: #d14
}

.highlight .sh {
    color: #d14
}

.highli ght .si {
    color: #d14
}

.highlight .sx {
    color: #d14
}

.highlight .sr {
    color: #009926
}

.highlight .s1 {
    color: #d14
}

.highlight .ss {
    color: #990073
}

.highlight .bp {
    color: #999
}

.highlight .vc {
    color: teal
}

.highlight .vg {
    color: teal
}

.highlight .vi {
    color: teal
}

.highlight .il {
    color: #099
}
body {
  line-height: 1.9;
}
//.main-container {
  //margin: 40px 10%;
//}

.float-left {
    float:left;
}

.clear {
    clear: both;
}

.hero {
    background: url("/images/podcastbg.png") no-repeat bottom;
    background-size: cover;
    min-height: 45em;
}
.hero-text {
    color: #ffffff;
    padding: 10% 0;
    margin-left: 70px;
    position: relative;
    font-family: 'Roboto', sans-serif;
}

.hero-text .hero-title H1 {
    font-size: 3em;
    font-weight: bold;
}

.hero-text .hero-subtitle H2 {
    font-size: 2em;
    font-weight: bold;
}

.img-max400 {
  max-width: 400px;
}
.rounded-6px {
  border-radius: 6px;
}    
.img-contact {
    height: 2em;
}
.img-20em {
    height: 20em;
}

.trigger ul li {
    list-style: none;
}

.site-nav {
    line-height: 35px !important;
}

/* Add a color to the active/current link */
nav li.active a, nav li:hover a {
    color: #2DCCBC;
    text-decoration: underline;
}
nav li.active a {
    font-weight: bold;
}
/* Change the color of links on hover */
//nav li:hover {
    //background-color: #42424240;
    //color: white;
    //border-bottom-left-radius: 20px;
    //border-bottom-right-radius: 20px;
//}

nav {
    float: left;
    ul {
        float: left;
    }
    ul > li {
        float: left;
        padding: 0 1.4em;
        margin-top: 80px;
    }
}

.podcast-episode {
    i {
        font-size: 12px;
        color: #666;
        padding-left: 15px;
    }

    p {
        font-size: 12px;
        color: #666;
        padding-left: 15px;
    }

    margin-bottom: 20px;
    border-bottom: 1px solid #ccc;
}

.browse-underline {
    border-top: #89888838 solid 1px;
    width: 250px;
    top: -16px;
    position: relative;
    left: 37px;
}

// Mobile Phone
@media screen and (max-width:600px) {
    .two-thirds {
        max-width: 86%;
    }

    nav ul > li {
        float: left;
        padding: 0 0;
        margin-top: 20px;
    }

    .hero-text {
        padding: 10% 0;
        margin-left: 10px;
    }

    .instagram-post {
        padding: 0; 
        margin: 0;
    }
    .a-page {
        margin: 1em;
    }
    .trigger-hide {
        display: none;
    }

    nav {
        clear: both;
        ul > li {
            text-align: left;
            width: 86%;
            border-bottom: 1px solid #ccc;
        }
    }

    .menu-icon {
        cursor: pointer;
    }
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (30px/2));
        width: calc(10 0% - (30px/2))
    }

    .inside-container {
        padding: 1em;
    }

    .site-nav {
        position: absolute;
        top: 9px;
        right: 1px;
        background-color: #fdfdfd;
        border: 1px solid #e8e8e8;
        border-radius: 5px;
        text-align: right
    }
    .site -nav label[for=nav-trigger] {
        display: block;
        float: right;
        width: 36px;
        height: 36px;
        z-index: 2;
        cursor: pointer
    }
    .site-nav .menu-icon {
        display: block;
        float: right;
        width: 36px;
        height: 26px;
        line-height: 0;
        padding-top: 10px;
        text-align: center
    }
    .site-nav .menu-icon>svg path {
        fill: #424242
    }
    .sit e-nav input~.trigger {
        clear: both;
        display: none
    }
    .site-nav input:checked~.trigger {
        display: block;
        padding-bottom: 5px
    }
    .site-nav .page-link {
        display: block;
        padding: 5px 10px;
        margin-left: 20px
    }
    .site-nav .page-link:not(:last-child) {
        margin-right: 0
    }
}

//Tablet
@media screen and (max-width:800px) {
    nav ul > li {
        float: left;
        padding: 0 1.4em;
        margin-top: 0;
    }

    .hero-text {
        padding: 10% 0;
        margin-left: 10px;
    }

    .instagram-post {
        padding: 1px; 
        margin: 1px;
    }
    .a-page {
        margin: 1em;
    }

    .wrapper {
        max-width: -webkit-calc(800px - (30px));
        max-width: calc(800px - (30px));
        padding-right: 15px;
        padding-left: 15px
    }
    .post-content h4 {
        font-size: 18px
    }
    .post-content h3 {
        font-size: 22px
    }
    .post-content h2 {
        font-size: 28px
    }
    .footer-c ol-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (30px/2));
        width: calc(50% - (30px/2))
    }
    .footer-col-3 {
        width: -webkit-calc(100% - (30px/2));
        width: calc(100% - (30px/2))
    }
    .post-title {
        font-size: 36px
    }
}

